--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ placeholder="Type your Question"
 />
 </div>
 
-<p id="chatLog">Answer Appering Hear</p>
+<p id="chatLog">Answer Appearing Here</p>
 </div>
 
 </body>
